# CMake_lecture

./: .gitmodules  README.md
Case01/: CMakeLists.txt  main.cpp
Case02/: CMakeLists.txt
Case02/src/: case02.cpp  main.cpp
Case03/: CMakeLists.txt
Case03/app/: main.cpp
Case03/include/: case03.hpp
Case03/src/: case03.cpp
Case04/: CMakeLists.txt
Case04/app/: main.cpp  main2.cpp  main3.cpp
Case04/include/: case04.hpp
Case04/src/: case04.cpp
Case05/: CMakeLists.txt
Case05/app/: main2.cpp  main3.cpp
Case05/include/: sample02.hpp
Case05/src/: sample02.cpp
Case06/: CMakeLists.txt
Case06/app/: main.cpp
Case07/: CMakeLists.txt
Case07/app/: main.cpp
Case07/include/: sample01.hpp
Case07/src/: sample01.cpp
Case08/: CMakeLists.txt
Case08/app/: test_case08.cpp
